Added requested improvements to HomePage

--- a/src/Orders/orderDetails.html
+++ b/src/Orders/orderDetails.html
@@ -226,6 +226,7 @@
           <div class="w-full flex flex-col gap-y-4 text-sm">
             <input
               type="date"
+              placeholder="Delivery Date"
               class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
           </div>
@@ -262,7 +263,7 @@
             class="border border-important-black-color rounded-sm w-2/3 md:w-1/3 text-sm text-center"
           >
             <button
-              class="py-1 full:py-2 w-full cursor-pointer text-important-black-color font-lora font-normal fullHd:text-[14px]"
+              class="py-2 full:py-[9px] w-full cursor-pointer text-important-black-color font-lora font-normal fullHd:text-[14px]"
             >
               Cancel
             </button>
