--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     >
       <ul class="flex justify-between fullHd:w-[95%] items-center w-full">
         <ul
-          class="text-xl fullHd:text-[28px] font-medium font-lora flex gap-x-2 items-center"
+          class="text-xl fullHd:text-[30px] font-semibold font-lora flex gap-x-2 items-center"
         >
           <img src="images/logo.png" alt="" class="" />
           <li>ITP Library</li>
@@ -83,13 +83,15 @@
       </div>
     </nav>
 
-    <div class="relative mb-20">
+    <div class="relative mb-20 mx-6">
       <aside
-        class="h-[600px] fullHd:h-[800px] bg-carrousel-color md:flex items-center lg:justify-between md:pl-8 fullHd:justify-start flex-wrap w-full xl:pl-36"
+        class="h-[600px] fullHd:h-[870px] bg-carrousel-color md:flex items-center lg:justify-between md:pl-8 fullHd:justify-evenly flex-wrap w-full fullHd:px-16"
       >
-        <div class="space-y-6 p-4 md:p-0 md:w-1/2 lg:w-2/5">
+        <div
+          class="space-y-6 p-4 md:p-0 md:w-1/2 lg:w-2/5 xl:pl-20 fullHd:pl-0"
+        >
           <div
-            class="font-semibold font-lora text-important-black-color carrousel-description fullHd:text-[64px] text-wrap md:w-3/4"
+            class="font-[600] font-lora text-2xl md:text-5xl text-important-black-color fullHd:text-[64px] text-wrap fullHd:w-[75%] fullHd:leading-tight"
           >
             Buy textbooks for the best price
           </div>
@@ -106,21 +108,21 @@
           <img
             src="./images/carrousel1.png"
             alt="carrousel-first-pic"
-            class="md:w-2/3 h-2/3 lg:w-full fullHd:h-3/4 fullHd:w-[90%] rounded-3xl object-cover"
+            class="md:w-2/3 h-2/3 lg:w-full fullHd:h-[70%] fullHd:w-[90%] rounded-3xl object-cover"
           />
         </div>
       </aside>
 
-      <div class="container mx-auto w-full fullHd:w-[90%] -mt-20">
-        <section class="h-fit px-8 bg-white-color flex flex-col gap-y-6">
+      <div class="container mx-auto w-full fullHd:w-11/12 -mt-28">
+        <section class="h-fit xl:px-10 bg-white-color flex flex-col gap-y-6">
           <div class="w-full">
             <div
-              class="py-10 font-roboto font-normal fullHd:text-[24px] text-normal-black-color"
+              class="py-12 font-roboto text-2xl text-center lg:text-start font-normal fullHd:text-[24px] text-normal-black-color"
             >
               Best Books of the month
             </div>
             <div
-              class="flex flex-wrap lg:flex-nowrap md:gap-8 lg:gap-y-0 space-y-12 md:space-y-0 mx-auto lg:overflow-x-scroll fullHd:max-w-full gap-x-8 fullHd:space-x-3 h-fit px-6 lg:-mx-6"
+              class="flex flex-wrap lg:flex-nowrap md:gap-8 lg:gap-y-0 space-y-12 md:space-y-0 mx-auto fullHd:py-8 fullHd:-my-8 lg:overflow-x-scroll fullHd:max-w-full gap-x-8 fullHd:space-x-3 h-fit px-6 lg:-mx-6"
             >
               <div
                 class="flex flex-col w-full md:w-[30%] lg:w-fit xl:w-fit fullHd:flex-shrink-0"
@@ -433,12 +435,12 @@
           </div>
           <div class="">
             <div
-              class="py-10 font-roboto font-normal fullHd:text-[24px] text-normal-black-color"
+              class="py-10 pt-20 font-roboto font-normal text-center text-2xl lg:text-start fullHd:text-[24px] text-normal-black-color"
             >
-              Rcently Added
+              Recently Added
             </div>
             <div
-              class="flex flex-wrap lg:flex-nowrap md:gap-8 lg:gap-y-0 space-y-12 md:space-y-0 mx-auto lg:overflow-x-scroll fullHd:max-w-full gap-x-8 fullHd:space-x-3 h-fit px-6 lg:-mx-6"
+              class="flex flex-wrap lg:flex-nowrap md:gap-8 lg:gap-y-0 space-y-12 md:space-y-0 mx-auto lg:overflow-x-scroll fullHd:max-w-full gap-x-8 fullHd:space-x-3 h-fit px-6 lg:-mx-6 xl:py-8 xl:-my-8"
             >
               <div
                 class="flex flex-col w-full md:w-[30%] lg:w-fit xl:w-fit fullHd:flex-shrink-0"
@@ -754,10 +756,10 @@
     </div>
 
     <footer
-      class="h-14 bg-footer-color fullHd:h-[70px] text-xs px-4 fullHd:px-2"
+      class="h-14 bg-footer-color fullHd:h-[70px] text-xs px-4 fullHd:px-2 fullHd:pr-6"
     >
       <div
-        class="container m-auto fullHd:w-[90%] fullHd:px-8 flex items-center justify-between h-full"
+        class="container mx-auto fullHd:w-[85%] flex items-center justify-between h-full"
       >
         <div class="flex gap-x-2 items-center">
           <div
@@ -773,9 +775,9 @@
         </div>
         <a href="#">
           <button
-            class="p-1 px-1.5 fullHd:py-2 fullHd:px-2.5 fullHd:text-[15px] rounded-md bg-black"
+            class="p-1 px-1.5 flex items-center fullHd:py-2 fullHd:px-2.5 rounded-sm bg-black"
           >
-            <i class="fa-solid fa-chevron-up text-white"></i>
+            <i class="fa-solid fa-angle-up text-lg font-thin text-white"></i>
           </button>
         </a>
       </div>
