--- a/src/Orders/OrderModal.html
+++ b/src/Orders/OrderModal.html
@@ -283,7 +283,7 @@
       <div class="w-[12%]"></div>
 
       <div
-        class="fixed top-1/3 right-1/2 translate-x-1/2 rounded-sm bg-white-color h-1/5 w-1/3 xl:h-[15%] ultraQ:w-1/4 z-50 p-6 flex flex-col justify-between"
+        class="fixed top-1/3 right-1/2 translate-x-1/2 bg-opacity-25 rounded-sm bg-white-color h-1/5 w-1/3 xl:h-[15%] ultraQ:w-1/4 z-30 p-6 flex flex-col justify-between"
       >
         <div class="flex gap-x-2 items-start">
           <i class="fa-solid fa-circle-exclamation pt-1 text-beige-color"></i>
