--- a/src/Orders/orderList.html
+++ b/src/Orders/orderList.html
@@ -94,7 +94,7 @@
           Your products
         </div>
         <div
-          class="w-full flex flex-wrap gap-y-6 max-h-fit overflow-y-scroll px-4 md:px-0"
+          class="w-full flex flex-wrap gap-y-6 max-h-fit overflow-y-scroll px-4 md:px-4 -mx-4"
         >
           <div
             class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
@@ -103,7 +103,7 @@
               class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
             >
               <div
-                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+                class="md:w-24 md:h-24 h-32 bg-carrousel-color w-36 rounded-md flex justify-center items-center"
               >
                 <div
                   class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-20 fullHd:h-[120px]"
