Fixed Phone res Carrousel Image position issue

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div
-          class="flex justify-center items-center mx-auto h-1/2 md:m-0 lg:h-full w-full md:w-1/2"
+          class="flex justify-center xs:items-center mx-auto h-1/2 md:m-0 lg:h-full w-full md:w-1/2"
         >
           <img
             src="./images/carrousel1.png"
