--- a/src/Orders/OrderModal.html
+++ b/src/Orders/OrderModal.html
@@ -21,9 +21,9 @@
     ></script>
   </head>
 
-  <body class="w-screen h-screen bg-modal-color bg-opacity-10">
+  <body class="relative">
     <nav
-      class="bg-white-color navbar fullHd:mx-auto fullHd:w-full md:px-6 xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
+      class="bg-white-color navbar fullHd:mx-auto fullHd:w-[90%] md:px-6 xl:px-20 fullHd:pt-4 fullHd:px-10 text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
         <ul
@@ -83,7 +83,7 @@
     </nav>
 
     <section
-      class="my-5 container relative mx-auto px-4 gap-x-4 pt-10 md:flex justify-between fullHd:mb-20"
+      class="my-5 container mx-auto px-4 gap-x-4 md:gap-x-8 lg:gap-x-4 pt-10 md:flex justify-between fullHd:mb-20"
     >
       <div
         class="w-full xl:w-2/3 relative flex justify-center xl:justify-start fullHd:justify-center fullHd:w-3/5 lg:pt-20"
@@ -91,10 +91,10 @@
         <img
           src="../images/order.png"
           alt="image-order"
-          class="h-1/3 md:h-1/2 w-2/3 md:w-full lg:w-3/4 xl:w-4/5 fullHd:w-[512px] fullHd:h-[768px] xl:h-[55%] xl:p-2 fullHd:p-0 object-cover z-20 relative"
+          class="h-1/3 md:h-1/2 w-full md:w-full lg:w-3/4 xl:w-4/5 fullHd:w-[512px] fullHd:h-[768px] xl:h-[55%] xl:p-2 fullHd:p-0 object-cover z-20 relative"
         />
         <div
-          class="bg-carrousel-color w-4/5 md:w-full xl:h-[38%] lg:w-3/4 h-full lg:right-4 md:h-2/5 fullHd:h-[768px] fullHd:right-20 fullHd:w-[70%] xl:top-48 lg:h-2/5 absolute top-5 md:top-36 z-10"
+          class="bg-carrousel-color w-full md:w-full xl:h-[38%] lg:w-3/4 h-full -right-4 lg:right-4 md:h-2/5 fullHd:h-[768px] fullHd:right-20 fullHd:w-[70%] xl:top-48 lg:h-2/5 absolute top-10 md:top-36 z-10"
         ></div>
       </div>
       <div
@@ -112,19 +112,19 @@
             Contact Details
           </div>
           <div
-            class="w-full flex flex-wrap gap-x-4 gap-y-4 fullHd:gap-x-0 fullHd:justify-between md:gap-y-0 text-sm"
+            class="w-full flex flex-wrap gap-x-4 gap-y-4 fullHd:gap-x-0 fullHd:justify-between lg:gap-y-0 text-sm"
           >
             <input
               type="text"
               placeholder="First Name"
               required
-              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-gray-color fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full md:w-[48%]"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-gray-color fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full lg:w-[48%]"
             />
             <input
               type="text"
               placeholder="Last Name"
               required
-              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full md:w-[48%]"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full lg:w-[48%]"
             />
           </div>
         </div>
@@ -132,7 +132,7 @@
           <div
             class="text-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
           >
-            Billing Details
+            Billing Adress
           </div>
           <div class="w-full flex flex-col gap-y-4 text-sm">
             <select
@@ -190,7 +190,7 @@
               type="text"
               placeholder="Adress"
               required
-              class="ppy-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
             <input
               type="number"
@@ -227,6 +227,7 @@
           <div class="w-full flex flex-col gap-y-4 text-sm">
             <input
               type="date"
+              placeholder="Delivery Date"
               class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 text-base border outline-none"
             />
           </div>
@@ -260,62 +261,68 @@
         >
           <a
             href="orderList.html"
-            class="border border-important-black-color rounded-sm w-2/3 md:w-1/3 text-sm text-center"
+            class="border border-important-black-color rounded-sm w-2/3 md:w-2/5 lg:w-1/3 text-sm text-center"
           >
             <button
-              class="py-2 w-full cursor-pointer text-important-black-color font-lora font-normal fullHd:text-[14px]"
+              class="py-2 full:py-[9px] w-full cursor-pointer text-important-black-color font-lora font-normal fullHd:text-[14px]"
             >
               Cancel
             </button>
           </a>
           <a
             href="OrderModal.html"
-            class="border w-2/3 bg-black rounded-[4px] md:w-1/3 text-sm text-center"
+            class="border w-2/3 bg-black border-black rounded-[4px] md:w-2/5 lg:w-1/3 text-sm text-center"
           >
             <button
-              class="py-[9px] w-full cursor-pointer text-white font-lora font-normal fullHd:text-[14px]"
+              class="py-2 fullHd:py-[9px] w-full cursor-pointer text-white font-lora font-normal fullHd:text-[14px]"
             >
               Update Order
             </button>
           </a>
         </div>
       </div>
-      <div class="w-[12%]"></div>
-
       <div
-        class="fixed top-1/3 right-1/2 translate-x-1/2 bg-opacity-25 rounded-sm bg-white-color h-1/5 w-1/3 xl:h-[15%] ultraQ:w-1/4 z-30 p-6 flex flex-col justify-between"
+        class="z-50 w-screen h-screen flex justify-center items-center top-0 left-0 bg-modal-background fixed"
       >
-        <div class="flex gap-x-2 items-start">
-          <i class="fa-solid fa-circle-exclamation pt-1 text-beige-color"></i>
-          <div>
-            <span
-              class="font-roboto font-normal fullHd:text-[16px] xl:text-[14px] text-normal-black-color"
-              >Confirmation</span
-            >
-            <div
-              class="font-roboto font-normal xl:text-[12px] fullHd:text-[14px] text-gray-color"
-            >
-              Confirm Order Detail changes?
-            </div>
+        <div
+          class="w-4/5 md:w-1/2 flex px-6 pt-6 pb-4 flex-col justify-between fullHd:w-[588px] h-[173px] bg-white rounded-sm"
+        >
+          <div class="flex gap-x-4 items-start">
+            <span>
+              <i
+                class="fa-solid fa-circle-exclamation text-beige-color text-2xl pt-1"
+              ></i>
+            </span>
+            <span class="">
+              <div
+                class="font-roboto font-normal text-base text-normal-black-color"
+              >
+                Confirmation
+              </div>
+              <div class="font-roboto font-normal text-[14px] text-gray-color">
+                Confirmation order details changes?
+              </div>
+            </span>
           </div>
-        </div>
-        <div class="flex justify-between">
-          <div></div>
-          <div class="flex gap-x-6">
-            <a href="orderList.html">
-              <button
-                class="border-[1px] border-gray-200 py-1 fullHd:text-sm font-roboto px-4 xl:text-[12px] rounded-[4px]"
-              >
-                Cancel
-              </button>
-            </a>
-            <a href="orderList.html">
-              <button
-                class="bg-black py-1 fullHd:text-sm font-roboto text-white xl:text-[12px] px-4 rounded-[4px]"
-              >
-                Confirm
-              </button>
-            </a>
+          <div class="text-center md:text-right space-x-1">
+            <span class="">
+              <a href="orderList.html">
+                <button
+                  class="w-[75px] h-[32px] border border-modal-button-border rounded-[4px] font-roboto font-normal text-gray-color text-[14px]"
+                >
+                  Cancel
+                </button>
+              </a>
+            </span>
+            <span>
+              <a href="orderList.html">
+                <button
+                  class="bg-black rounded-[4px] w-[82px] h-[32px] text-white font-roboto font-normal text-[14px]"
+                >
+                  Confirm
+                </button>
+              </a>
+            </span>
           </div>
         </div>
       </div>
