--- a/src/Orders/orderDetails.html
+++ b/src/Orders/orderDetails.html
@@ -81,8 +81,9 @@
         <a href="./Login/login.html">Login</a>
       </div>
     </nav>
+
     <section
-      class="my-5 container mx-auto px-4 gap-x-4 pt-10 md:flex justify-between fullHd:mb-20"
+      class="my-5 container mx-auto px-4 gap-x-4 md:gap-x-8 lg:gap-x-4 pt-10 md:flex justify-between fullHd:mb-20"
     >
       <div
         class="w-full xl:w-2/3 relative flex justify-center xl:justify-start fullHd:justify-center fullHd:w-3/5 lg:pt-20"
@@ -90,10 +91,10 @@
         <img
           src="../images/order.png"
           alt="image-order"
-          class="h-1/3 md:h-1/2 w-2/3 md:w-full lg:w-3/4 xl:w-4/5 fullHd:w-[512px] fullHd:h-[768px] xl:h-[55%] xl:p-2 fullHd:p-0 object-cover z-20 relative"
+          class="h-1/3 md:h-1/2 w-full md:w-full lg:w-3/4 xl:w-4/5 fullHd:w-[512px] fullHd:h-[768px] xl:h-[55%] xl:p-2 fullHd:p-0 object-cover z-20 relative"
         />
         <div
-          class="bg-carrousel-color w-4/5 md:w-full xl:h-[38%] lg:w-3/4 h-full lg:right-4 md:h-2/5 fullHd:h-[768px] fullHd:right-20 fullHd:w-[70%] xl:top-48 lg:h-2/5 absolute top-5 md:top-36 z-10"
+          class="bg-carrousel-color w-full md:w-full xl:h-[38%] lg:w-3/4 h-full -right-4 lg:right-4 md:h-2/5 fullHd:h-[768px] fullHd:right-20 fullHd:w-[70%] xl:top-48 lg:h-2/5 absolute top-10 md:top-36 z-10"
         ></div>
       </div>
       <div
@@ -111,19 +112,19 @@
             Contact Details
           </div>
           <div
-            class="w-full flex flex-wrap gap-x-4 gap-y-4 fullHd:gap-x-0 fullHd:justify-between md:gap-y-0 text-sm"
+            class="w-full flex flex-wrap gap-x-4 gap-y-4 fullHd:gap-x-0 fullHd:justify-between lg:gap-y-0 text-sm"
           >
             <input
               type="text"
               placeholder="First Name"
               required
-              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-gray-color fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full md:w-[48%]"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-gray-color fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full lg:w-[48%]"
             />
             <input
               type="text"
               placeholder="Last Name"
               required
-              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full md:w-[48%]"
+              class="py-1 pl-2 border-border-color rounded-[4px] font-roboto font-normal placeholder-order-input fullHd:py-2 fullHd:pl-3 fullHd:text-base border outline-none w-full lg:w-[48%]"
             />
           </div>
         </div>
@@ -131,7 +132,7 @@
           <div
             class="text-xs font-roboto font-semibold fullHd:text-sm text-normal-black-color"
           >
-            Billing Details
+            Billing Adress
           </div>
           <div class="w-full flex flex-col gap-y-4 text-sm">
             <select
@@ -260,7 +261,7 @@
         >
           <a
             href="orderList.html"
-            class="border border-important-black-color rounded-sm w-2/3 md:w-1/3 text-sm text-center"
+            class="border border-important-black-color rounded-sm w-2/3 md:w-2/5 lg:w-1/3 text-sm text-center"
           >
             <button
               class="py-2 full:py-[9px] w-full cursor-pointer text-important-black-color font-lora font-normal fullHd:text-[14px]"
@@ -270,10 +271,10 @@
           </a>
           <a
             href="OrderModal.html"
-            class="border w-2/3 bg-black rounded-[4px] md:w-1/3 text-sm text-center"
+            class="border w-2/3 bg-black border-black rounded-[4px] md:w-2/5 lg:w-1/3 text-sm text-center"
           >
             <button
-              class="py-1.5 fullHd:py-[9px] w-full cursor-pointer text-white font-lora font-normal fullHd:text-[14px]"
+              class="py-2 fullHd:py-[9px] w-full cursor-pointer text-white font-lora font-normal fullHd:text-[14px]"
             >
               Update Order
             </button>
