--- a/src/Orders/orderList.html
+++ b/src/Orders/orderList.html
@@ -73,7 +73,7 @@
       </ul>
 
       <div
-        class="sm:hidden w-1/3 bg-white-color shadow-lg z-50 fixed right-0 flex flex-col gap-y-4 top-0 py-4 pl-4 rounded-bl-md text-important-black-color font-lora font-bold"
+        class="sm:hidden w-1/3 bg-white-color shadow-lg z-50 fixed right-0 flex flex-col gap-y-4 top-0 py-4 pl-4 rounded-bl-md text-important-black-color font-lora font-semibold"
       >
         <a href="index.html">Home</a>
         <a href="shoppingCart.html">Shopping Cart</a>
@@ -83,10 +83,10 @@
     </nav>
 
     <section
-      class="container mx-auto xl:w-[70%] fullHd:w-[75%] fullHd:px-10 h-4/5 p-4"
+      class="container mx-auto xl:w-[70%] fullHd:w-[75%] fullHd:px-10 h-[80%] fullHd:h-[65%] p-4"
     >
       <div
-        class="flex flex-col h-full gap-y-8 justify-between fullHd:p-0 py-10"
+        class="flex flex-col h-full gap-y-8 justify-between fullHd:p-0 py-10 md:px-10 lg:px-0"
       >
         <div
           class="text-2xl xl:text-[28px] fullHd:text-[38px] font-lora font-semibold from-important-black-color m-auto md:m-0"
@@ -94,19 +94,19 @@
           Your products
         </div>
         <div
-          class="w-full flex flex-wrap gap-y-6 max-h-fit overflow-y-scroll px-4 md:px-4 -mx-4"
+          class="w-full flex flex-wrap gap-y-12 md:gap-y-8 fullHd:gap-y-6 max-h-fit overflow-y-scroll px-4 md:px-4 -mx-4"
         >
           <div
-            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+            class="w-full flex justify-center md:justify-between flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
           >
             <div
               class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
             >
               <div
-                class="md:w-24 md:h-24 h-32 bg-carrousel-color w-36 rounded-md flex justify-center items-center"
+                class="md:w-24 md:h-24 h-32 w-36 rounded-md flex justify-center items-center"
               >
                 <div
-                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-20 fullHd:h-[120px]"
+                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-28 fullHd:h-[120px]"
                 >
                   <img
                     src="../images/orderBook.png"
@@ -118,17 +118,17 @@
               <div class="flex flex-col gap-y-4">
                 <div class="">
                   <div
-                    class="font-lora font-bold fullHd:text-[30px] text-2xl text-important-black-color"
+                    class="font-lora font-semibold fullHd:text-[30px] text-2xl text-important-black-color"
                   >
                     Order #78234
                   </div>
-                  <div class="flex gap-x-2 items-center">
+                  <div class="flex gap-x-2 items-center py-1">
                     <span
                       class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
                       >Items:</span
                     >
                     <span
-                      class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                      class="text-important-black-color font-semibold font-roboto fullHd:text-[24px]"
                       >2</span
                     >
                   </div>
@@ -136,18 +136,18 @@
                 <div class="flex gap-x-2 items-center text-sm">
                   <span
                     class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
-                    >Deivery Status:</span
+                    >Delivery Status:</span
                   >
                   <span
-                    class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                    class="text-important-black-color font-semibold font-roboto fullHd:text-[20px]"
                     >In Progress</span
                   >
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-2">
+            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-4">
               <div
-                class="text-beige-color font-roboto font-bold fullHd:text-[30px] text-xl"
+                class="text-beige-color font-roboto font-medium fullHd:text-[30px] text-xl"
               >
                 $90
               </div>
@@ -155,24 +155,25 @@
                 <i class="fa-solid fa-pencil"></i>
                 <a
                   href="./orderDetails.html"
-                  class="font-roboto fullHd:text-[20px]"
+                  class="font-roboto text-important-black-color fullHd:text-[20px]"
                 >
-                  Edit or remove Items
+                  Edit Order Details
                 </a>
               </div>
             </div>
           </div>
+          <div class="divider"></div>
           <div
-            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+            class="w-full flex justify-center md:justify-between flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
           >
             <div
               class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
             >
               <div
-                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+                class="md:w-24 md:h-24 h-32 w-36 rounded-md flex justify-center items-center"
               >
                 <div
-                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-20 fullHd:h-[120px]"
+                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-28 fullHd:h-[120px]"
                 >
                   <img
                     src="../images/orderBook.png"
@@ -184,17 +185,17 @@
               <div class="flex flex-col gap-y-4">
                 <div class="">
                   <div
-                    class="font-lora font-bold fullHd:text-[30px] text-2xl text-important-black-color"
+                    class="font-lora font-semibold fullHd:text-[30px] text-2xl text-important-black-color"
                   >
                     Order #78234
                   </div>
-                  <div class="flex gap-x-2 items-center">
+                  <div class="flex gap-x-2 items-center py-1">
                     <span
                       class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
                       >Items:</span
                     >
                     <span
-                      class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                      class="text-important-black-color font-semibold font-roboto fullHd:text-[24px]"
                       >2</span
                     >
                   </div>
@@ -202,43 +203,44 @@
                 <div class="flex gap-x-2 items-center text-sm">
                   <span
                     class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
-                    >Deivery Status:</span
+                    >Delivery Status:</span
                   >
                   <span
-                    class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
-                    >In Progress</span
+                    class="text-important-black-color font-semibold font-roboto fullHd:text-[20px]"
+                    >Completed</span
                   >
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-2">
+            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-4">
               <div
-                class="text-beige-color font-roboto font-bold fullHd:text-[30px] text-xl"
+                class="text-beige-color font-robot font-medium fullHd:text-[30px] text-xl"
               >
                 $90
               </div>
-              <div class="flex gap-x-2 items-center text-sm">
+              <div class="gap-x-2 items-center text-sm hidden">
                 <i class="fa-solid fa-pencil"></i>
                 <a
                   href="orderDetails.html"
                   class="font-roboto fullHd:text-[20px]"
                 >
-                  Edit or remove Items
+                  Edit Order Details
                 </a>
               </div>
             </div>
           </div>
+          <div class="divider"></div>
           <div
-            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+            class="w-full flex justify-center md:justify-between flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
           >
             <div
               class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
             >
               <div
-                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+                class="md:w-24 md:h-24 h-32 w-36 rounded-md flex justify-center items-center"
               >
                 <div
-                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-20 fullHd:h-[120px]"
+                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-28 fullHd:h-[120px]"
                 >
                   <img
                     src="../images/orderBook.png"
@@ -250,17 +252,17 @@
               <div class="flex flex-col gap-y-4">
                 <div class="">
                   <div
-                    class="font-lora font-bold fullHd:text-[30px] text-2xl text-important-black-color"
+                    class="font-lora font-semibold fullHd:text-[30px] text-2xl text-important-black-color"
                   >
                     Order #78234
                   </div>
-                  <div class="flex gap-x-2 items-center">
+                  <div class="flex gap-x-2 items-center py-1">
                     <span
                       class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
                       >Items:</span
                     >
                     <span
-                      class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                      class="text-important-black-color font-semibold font-roboto fullHd:text-[24px]"
                       >2</span
                     >
                   </div>
@@ -268,18 +270,18 @@
                 <div class="flex gap-x-2 items-center text-sm">
                   <span
                     class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
-                    >Deivery Status:</span
+                    >Delivery Status:</span
                   >
                   <span
-                    class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                    class="text-important-black-color font-semibold font-roboto fullHd:text-[20px]"
                     >In Progress</span
                   >
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-2">
+            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-4">
               <div
-                class="text-beige-color font-roboto font-bold fullHd:text-[30px] text-xl"
+                class="text-beige-color font-roboto font-medium fullHd:text-[30px] text-xl"
               >
                 $90
               </div>
@@ -289,22 +291,23 @@
                   href="orderDetails.html"
                   class="font-roboto fullHd:text-[20px]"
                 >
-                  Edit or remove Items
+                  Edit Order Details
                 </a>
               </div>
             </div>
           </div>
+          <div class="divider"></div>
           <div
-            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+            class="w-full flex justify-center md:justify-between flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
           >
             <div
               class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
             >
               <div
-                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+                class="md:w-24 md:h-24 h-32 w-36 rounded-md flex justify-center items-center"
               >
                 <div
-                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-20 fullHd:h-[120px]"
+                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-28 fullHd:h-[120px]"
                 >
                   <img
                     src="../images/orderBook.png"
@@ -316,17 +319,17 @@
               <div class="flex flex-col gap-y-4">
                 <div class="">
                   <div
-                    class="font-lora font-bold fullHd:text-[30px] text-2xl text-important-black-color"
+                    class="font-lora font-semibold fullHd:text-[30px] text-2xl text-important-black-color"
                   >
                     Order #78234
                   </div>
-                  <div class="flex gap-x-2 items-center">
+                  <div class="flex gap-x-2 items-center py-1">
                     <span
                       class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
                       >Items:</span
                     >
                     <span
-                      class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                      class="text-important-black-color font-semibold font-roboto fullHd:text-[24px]"
                       >2</span
                     >
                   </div>
@@ -334,18 +337,18 @@
                 <div class="flex gap-x-2 items-center text-sm">
                   <span
                     class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
-                    >Deivery Status:</span
+                    >Delivery Status:</span
                   >
                   <span
-                    class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                    class="text-important-black-color font-semibold font-roboto fullHd:text-[20px]"
                     >In Progress</span
                   >
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-2">
+            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-4">
               <div
-                class="text-beige-color font-roboto font-bold fullHd:text-[30px] text-xl"
+                class="text-beige-color font-roboto font-medium fullHd:text-[30px] text-xl"
               >
                 $90
               </div>
@@ -355,22 +358,23 @@
                   href="orderDetails.html"
                   class="font-roboto fullHd:text-[20px]"
                 >
-                  Edit or remove Items
+                  Edit Order Details
                 </a>
               </div>
             </div>
           </div>
+          <div class="divider"></div>
           <div
-            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+            class="w-full flex justify-center md:justify-between flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
           >
             <div
               class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
             >
               <div
-                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+                class="md:w-24 md:h-24 h-32 w-36 rounded-md flex justify-center items-center"
               >
                 <div
-                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-20 fullHd:h-[120px]"
+                  class="md:w-24 md:h-24 h-32 w-32 xl:w-16 fullHd:w-28 fullHd:h-[120px]"
                 >
                   <img
                     src="../images/orderBook.png"
@@ -382,17 +386,17 @@
               <div class="flex flex-col gap-y-4">
                 <div class="">
                   <div
-                    class="font-lora font-bold fullHd:text-[30px] text-2xl text-important-black-color"
+                    class="font-lora font-semibold fullHd:text-[30px] text-2xl text-important-black-color"
                   >
                     Order #78234
                   </div>
-                  <div class="flex gap-x-2 items-center">
+                  <div class="flex gap-x-2 items-center py-1">
                     <span
                       class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
                       >Items:</span
                     >
                     <span
-                      class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                      class="text-important-black-color font-semibold font-roboto fullHd:text-[24px]"
                       >2</span
                     >
                   </div>
@@ -400,18 +404,18 @@
                 <div class="flex gap-x-2 items-center text-sm">
                   <span
                     class="text-normal-black-color font-roboto font-normal fullHd:text-[20px]"
-                    >Deivery Status:</span
+                    >Delivery Status:</span
                   >
                   <span
-                    class="text-important-black-color font-bold font-roboto fullHd:text-[24px]"
+                    class="text-important-black-color font-semibold font-roboto fullHd:text-[20px]"
                     >In Progress</span
                   >
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-2">
+            <div class="flex flex-col items-center sm:items-end fullHd:gap-y-4">
               <div
-                class="text-beige-color font-roboto font-bold fullHd:text-[30px] text-xl"
+                class="text-beige-color font-roboto font-medium fullHd:text-[30px] text-xl"
               >
                 $90
               </div>
@@ -421,7 +425,7 @@
                   href="orderDetails.html"
                   class="font-roboto fullHd:text-[20px]"
                 >
-                  Edit or remove Items
+                  Edit Order Details
                 </a>
               </div>
             </div>
@@ -442,18 +446,11 @@
             @Copyright
           </div>
           <div
-            class="text-normal-black-color fullHd:text-[14px] font-roboto font-bold underline"
+            class="text-normal-black-color fullHd:text-[14px] font-roboto font-semibold underline"
           >
             IT Perspectives
           </div>
         </div>
-        <a href="#">
-          <button
-            class="p-1 px-1.5 fullHd:py-2 fullHd:px-2.5 fullHd:text-[15px] rounded-md bg-black"
-          >
-            <i class="fa-solid fa-chevron-up text-white"></i>
-          </button>
-        </a>
       </div>
     </footer>
   </body>
