--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
         class="h-[600px] fullHd:h-[870px] bg-carrousel-color md:flex items-center lg:justify-between md:pl-8 fullHd:justify-evenly flex-wrap w-full fullHd:px-16"
       >
         <div
-          class="space-y-6 p-4 md:p-0 md:w-1/2 lg:w-2/5 xl:pl-20 fullHd:pl-0"
+          class="space-y-6 md:h-2/3 xl:h-1/3 p-4 md:p-0 md:w-1/2 lg:w-2/5 xl:pl-20 fullHd:pl-0"
         >
           <div
             class="font-[600] font-lora text-2xl md:text-5xl text-important-black-color fullHd:text-[64px] text-wrap fullHd:w-[75%] fullHd:leading-tight"
@@ -759,7 +759,7 @@
       class="h-14 bg-footer-color fullHd:h-[70px] text-xs px-4 fullHd:px-2 fullHd:pr-6"
     >
       <div
-        class="container mx-auto fullHd:w-[85%] flex items-center justify-between h-full"
+        class="container mx-auto md:w-[90%] lg:w-full xl:w-[85%] flex items-center justify-between h-full"
       >
         <div class="flex gap-x-2 items-center">
           <div
