--- a/src/gridLayout/Login/LoginGrid.html
+++ b/src/gridLayout/Login/LoginGrid.html
@@ -18,10 +18,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../Orders/OrderList/OrderList.css" />
+    <link rel="stylesheet" href="LoginGrid.css" />
     <title>ITP Library</title>
   </head>
-  <body class="shopping-body">
-    <div></div>
+
+  <body class="login-body">
+    <!-- <div></div> -->
     <nav class="navbar-container">
       <ul class="navbar-header">
         <img src="../../images/logo.png" alt="" class="navbar-img" />
@@ -47,7 +49,7 @@
           </a>
         </li>
         <li>
-          <a href="../Login/LoginGrid.html">
+          <a href="./Login/login.html">
             <i class="fa-solid fa-user"></i>
             <span>Login</span>
           </a>
@@ -58,69 +60,45 @@
         <a href="index.html">Home</a>
         <a href="shoppingCart.html">Shopping Cart</a>
         <a href="./Orders/orderList.html">Orders</a>
-        <a href="../Login/LoginGrid.html">Login</a>
+        <a href="./Login/login.html">Login</a>
       </div>
     </nav>
 
-    <section class="order-section-container">
-      <div class="shopping-section-title">Your products</div>
-      <div class="orders-container">
-        <div class="shopping-wrapper">
-          <img src="../../images/the-idiot.jpg" alt="" class="shopping-img" />
-          <div class="order-details">
-            <div class="order-item-id">Hero with Gold</div>
-            <div class="order-items">
-              <span class="order-label">by </span>
-              <span class="order-count">Dougie Rogers</span>
-            </div>
-          </div>
-          <div class="order-checkout">
-            <div class="order-price">$90</div>
-            <div class="order-edit">
-              <i class="fa-solid fa-trash-can order-edit-icon"></i>
-              <span class="order-edit-label">Remove</span>
-            </div>
-          </div>
-        </div>
-        <div class="divider"></div>
+    <section class="login-section-container">
+      <img src="../../images/auth.png" alt="auth-img" class="login-img" />
 
-        <div class="shopping-wrapper">
-          <img src="../../images/the-idiot.jpg" alt="" class="shopping-img" />
-          <div class="order-details">
-            <div class="order-item-id">Hero with Gold</div>
-            <div class="order-items">
-              <span class="order-label">by </span>
-              <span class="order-count">Dougie Rogers</span>
-            </div>
+      <div class="login-panel">
+        <div class="login-title">
+          <div class="login-title-label">Log in</div>
+          <div class="login-subtitle">Use a local account to log in</div>
+        </div>
+        <div class="form">
+          <div class="input-container">
+            <div class="input-label">Email</div>
+            <input type="text" placeholder="Email" class="input-box" />
           </div>
-          <div class="order-checkout">
-            <div class="order-price">$90</div>
-            <div class="order-edit">
-              <i class="fa-solid fa-trash-can order-edit-icon"></i>
-              <span class="order-edit-label">Remove</span>
-            </div>
+          <div class="input-container">
+            <div class="input-label">Password</div>
+            <input type="text" placeholder="Password" class="input-box" />
+          </div>
+          <div class="remember-container">
+            <input type="checkbox" class="checkbox" />
+            <div class="remember">Remember me?</div>
           </div>
         </div>
-        <div class="divider"></div>
+        <div class="log-wrapper">
+          <div class="log-container">
+            <button class="place-order-btn log-btn">Log in</button>
+          </div>
+          <div class="link-container">
+            <a class="forgot">Forgot your password?</a>
+            <a href="./RegisterGrid.html" class="register"
+              >Register as a user</a
+            >
+          </div>
+        </div>
       </div>
     </section>
-
-    <div class="shopping-cart-total-container">
-      <div class="shopping-cart-total">
-        <div class="shopping-cart-total-label">Total:</div>
-        <div class="shopping-cart-total-price order-price">$90</div>
-      </div>
-      <div class="shopping-cart-buttons">
-        <a href="../HomePage/HomePageGrid.html ">
-          <button class="shopping-button continue-btn">
-            Continue Shopping
-          </button>
-        </a>
-        <a href="../Orders/OrderList/OrderDetailsGrid.html">
-          <button class="shopping-button place-order-btn">Place Order</button>
-        </a>
-      </div>
-    </div>
 
     <footer class="footer-container">
       <div class="footer-wrapper">
