--- a/src/gridLayout/Orders/OrderList/OrderListGrid.html
+++ b/src/gridLayout/Orders/OrderList/OrderListGrid.html
@@ -41,13 +41,13 @@
           </a>
         </li>
         <li>
-          <a href="./Orders/orderList.html">
+          <a href="OrderListGrid.html">
             <i class="fa-solid fa-truck-fast"></i>
             <span>Orders</span>
           </a>
         </li>
         <li>
-          <a href="./Login/login.html">
+          <a href="../../Login/LoginGrid.html">
             <i class="fa-solid fa-user"></i>
             <span>Login</span>
           </a>
@@ -56,9 +56,9 @@
 
       <div class="mobile-sidebar">
         <a href="index.html">Home</a>
-        <a href="shoppingCart.html">Shopping Cart</a>
-        <a href="./Orders/orderList.html">Orders</a>
-        <a href="./Login/login.html">Login</a>
+        <a href="../../ShoppingCart/ShoppingCartGrid.html">Shopping Cart</a>
+        <a href="OrderListGrid.html">Orders</a>
+        <a href="../../Login/LoginGrid.html">Login</a>
       </div>
     </nav>
 
