--- a/src/gridLayout/ShoppingCart/ShoppingCartGrid.html
+++ b/src/gridLayout/ShoppingCart/ShoppingCartGrid.html
@@ -35,7 +35,7 @@
           </a>
         </li>
         <li>
-          <a href="shoppingCart.html">
+          <a href="ShoppingCartGrid.html">
             <i class="fa-solid fa-cart-shopping"></i>
             <span>Shopping Cart</span>
           </a>
@@ -56,8 +56,8 @@
 
       <div class="mobile-sidebar">
         <a href="index.html">Home</a>
-        <a href="shoppingCart.html">Shopping Cart</a>
-        <a href="./Orders/orderList.html">Orders</a>
+        <a href="ShoppingCartGrid.html">Shopping Cart</a>
+        <a href="../Orders/OrderList/OrderListGrid.html">Orders</a>
         <a href="../Login/LoginGrid.html">Login</a>
       </div>
     </nav>
