--- a/src/gridLayout/Login/LoginGrid.html
+++ b/src/gridLayout/Login/LoginGrid.html
@@ -37,7 +37,7 @@
           </a>
         </li>
         <li>
-          <a href="shoppingCart.html">
+          <a href="../ShoppingCart/ShoppingCartGrid.html">
             <i class="fa-solid fa-cart-shopping"></i>
             <span>Shopping Cart</span>
           </a>
@@ -49,7 +49,7 @@
           </a>
         </li>
         <li>
-          <a href="./Login/login.html">
+          <a href="LoginGrid.html">
             <i class="fa-solid fa-user"></i>
             <span>Login</span>
           </a>
@@ -58,9 +58,9 @@
 
       <div class="mobile-sidebar">
         <a href="index.html">Home</a>
-        <a href="shoppingCart.html">Shopping Cart</a>
-        <a href="./Orders/orderList.html">Orders</a>
-        <a href="./Login/login.html">Login</a>
+        <a href="../ShoppingCart/ShoppingCartGrid.html">Shopping Cart</a>
+        <a href="../Orders/OrderList/OrderListGrid.html">Orders</a>
+        <a href="LoginGrid.html">Login</a>
       </div>
     </nav>
 
