Created OrderDetailsGrid Responsive from 325 - 1440px

--- a/src/gridLayout/Orders/OrderList/OrderListGrid.html
+++ b/src/gridLayout/Orders/OrderList/OrderListGrid.html
@@ -81,8 +81,10 @@
           <div class="order-checkout">
             <div class="order-price">$90</div>
             <div class="order-edit">
-              <i class="fa-solid fa-pencil order-edit-icon"></i>
-              <span class="order-edit-label">Edit Order Details</span>
+              <a href="OrderDetailsGrid.html" class="order-link">
+                <i class="fa-solid fa-pencil order-edit-icon"></i>
+                <span class="order-edit-label">Edit Order Details</span>
+              </a>
             </div>
           </div>
         </div>
