--- a/src/gridLayout/Login/LoginGrid.html
+++ b/src/gridLayout/Login/LoginGrid.html
@@ -31,7 +31,7 @@
       </ul>
       <ul class="navbar-links">
         <li>
-          <a href="index.html">
+          <a href="../Homepage/HomepageGrid.html">
             <i class="fa-solid fa-house"></i>
             <span>Home</span>
           </a>
@@ -57,7 +57,7 @@
       </ul>
 
       <div class="mobile-sidebar">
-        <a href="index.html">Home</a>
+        <a href="../Homepage/HomepageGrid.html">Home</a>
         <a href="../ShoppingCart/ShoppingCartGrid.html">Shopping Cart</a>
         <a href="../Orders/OrderList/OrderListGrid.html">Orders</a>
         <a href="LoginGrid.html">Login</a>
