--- a/src/gridLayout/Orders/OrderDetails/OrderDetailsModalGrid.html
+++ b/src/gridLayout/Orders/OrderDetails/OrderDetailsModalGrid.html
@@ -30,7 +30,7 @@
       </ul>
       <ul class="navbar-links">
         <li>
-          <a href="index.html">
+          <a href="../../Homepage/HomepageGrid.html">
             <i class="fa-solid fa-house"></i>
             <span>Home</span>
           </a>
@@ -56,7 +56,7 @@
       </ul>
 
       <div class="mobile-sidebar">
-        <a href="index.html">Home</a>
+        <a href="../../Homepage/HomepageGrid.html">Home</a>
         <a href="../../ShoppingCart/ShoppingCartGrid.html">Shopping Cart</a>
         <a href="OrderListGrid.html">Orders</a>
         <a href="../../Login/LoginGrid.html">Login</a>
@@ -182,12 +182,12 @@
           </div>
           <div class="modal-confirmation">
             <span class="">
-              <a href="orderList.html">
+              <a href="../OrderList/OrderListGrid.html">
                 <button class="cancel-button">Cancel</button>
               </a>
             </span>
             <span>
-              <a href="orderList.html">
+              <a href="../OrderList/OrderListGrid.html">
                 <button class="confirm-button">Confirm</button>
               </a>
             </span>
