--- a/src/gridLayout/Orders/OrderList/OrderDetailsGrid.html
+++ b/src/gridLayout/Orders/OrderList/OrderDetailsGrid.html
@@ -30,7 +30,7 @@
       </ul>
       <ul class="navbar-links">
         <li>
-          <a href="index.html">
+          <a href="../../Homepage/HomepageGrid.html">
             <i class="fa-solid fa-house"></i>
             <span>Home</span>
           </a>
@@ -56,7 +56,7 @@
       </ul>
 
       <div class="mobile-sidebar">
-        <a href="index.html">Home</a>
+        <a href="../../Homepage/HomepageGrid.html">Home</a>
         <a href="../../ShoppingCart/ShoppingCartGrid.html">Shopping Cart</a>
         <a href="OrderListGrid.html">Orders</a>
         <a href="../../Login/LoginGrid.html">Login</a>
